--- a/footer.css
+++ b/footer.css
@@ -1,14 +1,13 @@
     .footer-hero-header {
     	text-align: left;
-    	padding: 40px 20px 40px 20px;
+    	padding: 2vw 3vw 0 3vw;
     	background-color: #fffeef;
+    	/* border: 1px dashed red; */
     }
 
     .footer-hero-content {
     	display: inline-block;
-    	/*border: 2px dashed red; */
-    	/* Orámovanie na test */
-    	padding: 10px;
+    	/* padding: 10px; */
     	transform-style: preserve-3d;
     	transform: rotateX(-90deg) rotateY(10deg);
     	opacity: 0;
@@ -16,8 +15,10 @@
 
     .footer-hero-header h2 {
     	font-size: 40px;
-    	margin-bottom: 10px;
+    	margin-top: 1vw;
+    	margin-bottom: 0;
     	color: #000;
+    	/* border: 1px dashed blue; */
     }
 
     .footer-hero-header p {
@@ -26,16 +27,23 @@
     	margin: 0;
     }
 
+    .footer-line {
+    	height: 1px;
+    	width: 100%;
+    	background: linear-gradient(to right, #38C, #148);
+    }
+
     .footer {
     	background-color: #fffeef;
     	/*#F8FFF8;*/
-    	padding: 70px 20px 30px 20px;
+    	padding: 3vw 2vw 1vw 2vw;
+    	/* border: 1px dashed red; */
     }
 
     .footer-grid {
     	display: grid;
     	grid-template-columns: repeat(4, 1fr);
-    	gap: 30px;
+    	gap: 2vw;
     	max-width: 1200px;
     	margin: 0 auto;
     }
@@ -81,8 +89,8 @@
 
     .footer-logo-box {
     	background-color: #333;
-    	padding: 15px;
-    	border-radius: 8px;
+    	padding: 1.5vw;
+    	border-radius: 0.8vw;
     	display: inline-block;
     }
 
@@ -106,7 +114,7 @@
     	justify-content: space-between;
     	align-items: center;
     	text-align: left;
-    	padding: 30px 20px;
+    	padding: 1vw 0;
     	font-size: 12px;
     	color: #555;
     	max-width: 1200px;
@@ -124,11 +132,13 @@
 
     .footer-back-to-top {
     	font-size: 20px;
-    	bottom: 20px;
-    	right: 20px;
+    	padding-right: 2vw;
+    	/* bottom: 1vw;
+    	right: 2vw; */
     	color: #555;
     }
 
+    /* footer-hidden sa pouziva v javascripte pri ponukach */
     .footer-hidden {
     	display: none;
     }
