--- a/it1.css
+++ b/it1.css
@@ -1,58 +1,50 @@
     .it1-body {
-      font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;
-      font-weight: 200;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: linear-gradient(
-        to bottom,
-        #1848A0 0%,
-        #040411 100%
-      ), 
-      linear-gradient(
-        to right,
-        rgba(0,0,0,0) 0%,
-        rgba(0,0,0,0.3) 100%
-      );
-      background-blend-mode: multiply;
+    	font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;
+    	font-weight: 200;
+    	display: flex;
+    	justify-content: center;
+    	align-items: center;
+    	background:
+    		linear-gradient(to bottom, #1848A0 0%, #040411 100%),
+    		linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.3) 100%);
+    	background-blend-mode: multiply;
     }
 
     .it1-inner {
-      width: 90%;
-/*      max-width: 900px; */
-      padding: clamp(3rem, 10vw, 6rem), clamp(1.5rem, 5vw, 3rem);
-      font-size: clamp(1rem, 2vw, 1.2rem);
-      color: #fff;
-      text-align: left;
-      margin-top: 3rem;
-      margin-bottom: 3rem;
-/*      border: 1px dashed red; */
+    	width: 90%;
+    	/*      max-width: 900px; */
+    	padding: clamp(3rem, 10vw, 6rem), clamp(1.5rem, 5vw, 3rem);
+    	font-size: clamp(1rem, 2vw, 1.2rem);
+    	color: #fff;
+    	text-align: left;
+    	margin-top: 3rem;
+    	margin-bottom: 3rem;
     }
 
     .it1-line {
-      height: 1px;
-      width: 100%;
-      background: linear-gradient(to right, #AAA, #666);
-      margin-bottom: 2rem;
-     }
-
-    .it1-inner h3 {
-      margin-bottom: 2rem;
-      font-size: clamp(1rem, 2.5vw, 1.5rem);
-      text-transform: uppercase;
-      letter-spacing: 1px;
+    	height: 1px;
+    	width: 100%;
+    	background: linear-gradient(to right, #AAA, #666);
+    	margin-bottom: 2rem;
     }
 
     .it1-inner h1 {
-      line-height: 1.2;
-      margin-top: 0;
-      margin-bottom: 7rem;
-      font-size: clamp(2rem, 6vw, 4rem);
+    	line-height: 1.2;
+    	margin-top: 0;
+    	margin-bottom: 3vw;
+    	font-size: clamp(1.2rem, 3vw, 2rem);
+    	font-weight: 500;
     }
 
+    /* .it1-inner h3 {
+    	margin-bottom: 1rem;
+    	font-size: clamp(1rem, 2.5vw, 1.5rem);
+    	letter-spacing: 1px;
+    }
+ */
     .it1-inner p {
-      line-height: 1.6;
-      font-size: clamp(1rem, 2.5vw, 1.5rem);
-      padding-right: clamp(4rem, 10vw, 10rem);
-      /* padding-left: clamp(0.5rem, 2vw, 2rem); */
+    	line-height: 1.6;
+    	font-size: clamp(1rem, 2.5vw, 1.5rem);
+    	padding-right: clamp(4rem, 10vw, 10rem);
+    	/* padding-left: clamp(0.5rem, 2vw, 2rem); */
     }
