--- a/it5.css
+++ b/it5.css
@@ -1,4 +1,4 @@
-   .it4-body {
+   .it5-body {
    	font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;
    	font-weight: 200;
    	color: white;
@@ -9,21 +9,19 @@
    		linear-gradient(to right,
    			rgba(0, 0, 0, 0) 0%,
    			rgba(0, 0, 0, 0.3) 100%),
-   		#3878C0;
+   		#1848A0;
    	background-blend-mode: multiply;
    }
 
-   .it4-body h1 {
+   .it5-body h1 {
    	font-size: 2.6vw;
    	font-weight: 500;
    	margin: 0 0 2vw 0;
    	text-align: left;
    }
 
-   /* .it4-body h3 {
-   	font-size: 2.2vw;
-   	font-weight: 300;
-   	margin: 0 0 2vw 0;
-   	text-align: left;
+   .it5-animate-text-underline {
+   	--text-color: #BBEEFF;
+   	--hover-color: white;
+   	--underline-color: white;
    }
- */
