--- a/uvod1.css
+++ b/uvod1.css
@@ -41,30 +41,32 @@
       margin: 0.5rem 0 0 0;
     }
 
-    .uvod1-contact-button {
-      background-color: black;
-      color: white;
-      border: none;
-      margin-top: 2rem;
-      padding: calc(0.6rem + 2vw) calc(1rem + 2vw);
-      border-radius: 9999px;
-      font-size: calc(1.3rem + 0.5vw);
-      font-weight: bold;
-      cursor: pointer;
-      transition: background-color 0.3s, color 0.3s;
-      font-family: inherit;
-    }
+.uvod1-contact-button {
+  color: white;
+  border: none;
+  margin-top: 2rem;
+  padding: calc(0.6rem + 2vw) calc(1rem + 2vw);
+  border-radius: 9999px;
+  font-size: calc(1.3rem + 0.5vw);
+  font-weight: bold;
+  cursor: pointer;
+  font-family: inherit;
 
-    .uvod1-contact-button:hover {
-      background-color: white;
-      color: black;
-      border: 1px solid black;
-    }
+  background-color: #2A4184; /* stredná modrá z gradientu */
+  background-image: linear-gradient(to right, #1b2c5a, #2A4184 50%, #5a6bb0);
+  transition: background-color 0.3s, color 0.3s, border 0.3s;
+}
 
-    .uvod1-contact-button:active {
-      transform: scale(0.98);
-    }
+.uvod1-contact-button:hover {
+  /* background-color: #5a6bb0; */
+  background-image: linear-gradient(to right, #5a6bb0 , #2A4184 50%, #1b2c5a);
+  /* color: black; */
+  /* border: 1px solid black; */
+}
 
+/* .uvod1-contact-button:active {
+  transform: scale(0.98);
+} */
     .uvod1-hero-video {
       width: 100%;
       height: 100%;
